# pdf_analyzer

./: Cargo.toml  README.md
docs/plans/: 2026-01-10-pdf-analyzer-design.md  2026-01-10-pdf-analyzer-implementation.md  2026-01-11-pdfium-singleton-worker-design.md
src/: app.rs  error.rs  main.rs
src/analyzer/: color_analysis.rs  mod.rs  page_count.rs
src/config/: mod.rs
src/output/: cost.rs  mod.rs  summary.rs
src/pdf/: mod.rs  service.rs  worker.rs
