[package]
name = "pdf_analyzer"
version = "0.1.0"
edition = "2021"
description = "Cross-platform PDF analyzer with page counting and cost calculation"
license = "MIT"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
pdfium-render = { version = "0.8", features = ["image"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "2.0"
image = "0.25"
oneshot = "0.1"

[profile.release]
opt-level = 3
lto = true
